themes/default/css/realtime_rain.css
/*
 {$BRAND_NAME`}
 Copyright (c) ocProducts, 2004-2022
*/

/*{+START,INCLUDE,_realtime_rain_colours,.css,css,default}{+END}*/

.page-running-admin-realtime-rain {
	background-color: {$GET,bubblescape_outside};
	overflow: hidden;
}
.page-running-admin-realtime-rain .breadcrumbs {
	margin-bottom: 1em;
}
#real-time-surround {
	position: relative;
	height: 555px;
	background-color: {$GET,bubblescape};
	overflow: hidden;
	width: 100%;
}
#real-time {
	height: 100%;
	width: 100%;
	overflow: hidden;
	position: relative;
}

#loading-icon {
	padding-top: 250px;
}

#news-ticker {
	z-index: 100;
	overflow: hidden;
	min-height: 116px;
}
/*{+START,CSS_MODE,desktop}*/
	#news-ticker {
		position: absolute;
		top: 20px;
		left: calc(50% - 223px);
		width: 446px;
	}
/*{+END}*/
/*{+START,CSS_MODE,mobile}*/
	#news-ticker {
		width: 100%;
	}
/*{+END}*/
#news-ticker h1 {
	color: {$GET,bubble_text};
	font-weight: bold;
	font-size: 1.25em;
	padding: 10px;
	height: 64px;
	margin: 0;
	background: url('{$IMG;,realtime_rain/news/news_header}') no-repeat;
	background-size: 100% 100% !important;
	display: block;
}
#news-ticker .news-inside {
	background: url('{$IMG;,realtime_rain/news/news_bg}') repeat-y center top;
	background-size: 100% 100% !important;
}
#news-ticker .news-content {
	overflow: hidden;
	color: {$GET,bubble_text};
	font-size: 0.75em;
	padding: 0 20px;
}
#news-ticker .news-footer {
	background: url('{$IMG;,realtime_rain/news/news_bot}') no-repeat;
	background-size: 100% 100% !important;
	height: 21px;
}

#news-ticker {
	opacity: 0.5;
	transition: opacity 2s;
}
#news-ticker:hover {
	opacity: 1.0;
}

#timer-outer {
	width: 100%;
	padding: 10px 0;
	position: absolute;
	bottom: 10px;
	z-index: 100;
	color: {$GET,slightly_seeded_pale_text};
}
/*{+START,CSS_MODE,desktop}*/
	#timer-inner {
		width: 962px;
		margin: 0 auto;
	}
/*{+END}*/
#real-time-indicator {
	background: url('{$IMG;,realtime_rain/timeline/realtime_indicator}') no-repeat 0 0;
	background-size: 100% 100% !important;
	overflow: hidden;
	font-size: 0.75em;
	font-weight: bold;
	width: 94px;
	height: 51px;
	padding: 8px 5px 0 8px;
	color: {$GET,slightly_seeded_pale_text};
}
#real-time-indicator span {
	width: 80px;
	float: left;
	text-align: center;
}
#timer {
	height: 38px;
	background: url('{$IMG;,realtime_rain/timeline/timer_bg}') no-repeat;
	margin-top: 5px;
}
/*{+START,CSS_MODE,desktop}*/
	#timer {
		width: 952px;
		padding: 5px 0 0 5px;
	}
/*{+END}*/
/*{+START,CSS_MODE,mobile}*/
	#timer {
		padding: 4px 0 0 10px;
		width: 100%;
	}
/*{+END}*/
#pause-but {
	float: left;
	margin-right: 26px;
}
#pre-but {
	float: left;
}
#time-line {
	float: left;
	padding: 4px 0 0 0;
}
#time-line img {
	display: block;
	margin-top: 8px;
}
/*{+START,CSS_MODE,mobile}*/
	#time-line img {
		width: 200px;
	}
/*{+END}*/
#next-but {
	float: left;
}
#pause-but, #pre-but, #next-but, #time-line {
	cursor: pointer;
}

#timer-inner {
	opacity: 0.4;
	transition: opacity 2s;
}
#timer-inner:hover {
	opacity: 1.0;
}

#pre-but, #next-but, #pause-but:not(:hover) a:not(.paused), #pause-but:hover a.paused {
	opacity: 1.0;
}
#pre-but:hover, #next-but:hover, #pause-but:hover a:not(.paused), #pause-but:not(:hover) a.paused {
	opacity: 0.7;
}

.attitude-ecommerce-positive {
	background: url('{$IMG;,realtime_rain/effects/sun_effect}') no-repeat 0 0;
	background-size: 100% 100% !important;
	width: 224px;
	height: 222px;
	padding: 21px;
	margin: -21px;
}
.attitude-join-positive, .attitude-Lorem-positive {
	background: url('{$IMG;,realtime_rain/effects/halo_effect}') no-repeat 0 0;
	background-size: 100% 100% !important;
	width: 224px;
	height: 222px;
	padding: 21px;
	margin: -21px;
}
.attitude-security-negative {
	background: url('{$IMG;,realtime_rain/effects/horns_effect}') no-repeat 0 0;
	background-size: 100% 100% !important;
	width: 224px;
	height: 222px;
	padding: 21px;
	margin: -21px;
}
.attitude-point-charges-negative {
	background: url('{$IMG;,realtime_rain/effects/shadow_effect}') no-repeat 0 0;
	background-size: 100% 100% !important;
	width: 224px;
	height: 222px;
	padding: 21px;
	margin: -21px;
}

.activated-quote-button {
	opacity: 0.4;
}

.bubble {
	width: 161px;
	height: 161px;
	padding: 20px 0 0 11px;
	position: relative;
	margin: 10px;
	background-size: 100% 100% !important;
}
.bubble .avatar-icon {
	width: 40px;
	height: 40px;
	background-size: 100% 100% !important;
	margin: 10px 0 0 10px;
}
.bubble .avatar-icon img {
	margin-left: 5px;
	margin-top: 5px;
	width: 30px;
	height: auto;
	max-height: 30px;
}
.bubble h1 {
	margin-top: 6px;
	color: {$GET,bubble_text};
	font-weight: normal;
	float: left;
	font-size: 0.9em;
	border-bottom: 0;
}
.bubble .special-icon {
	float: right;
	padding: 3px 55px 0 0;
}
.bubble .special-icon span img {
	width: 22px;
}
.bubble .linkage {
	height: 10%;
	position: absolute;
	bottom: 0;
	font-size: 0.80em;
	padding: 0 0 24px 0;
	width: 110px;
	text-align: center;
}
.bubble .linkage a {
	color: {$GET,bubble_link};
	text-decoration: none;
}
.bubble .linkage a:hover{
	color: {$GET,bubble_hover_link};
	text-decoration: none;
}

.bubble-post {
	background: url('{$IMG;,realtime_rain/bubbles/post-bubble}') no-repeat;
}
.bubble-post .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/post-avatar}') no-repeat;
}

.bubble-news {
	background: url('{$IMG;,realtime_rain/bubbles/post-bubble}') no-repeat;
}
.bubble-news .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/post-avatar}') no-repeat;
}

.bubble-recommend {
	background: url('{$IMG;,realtime_rain/bubbles/recommend-bubble}') no-repeat;
}
.bubble-recommend .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/recommend-avatar}') no-repeat;
}

.bubble-polls {
	background: url('{$IMG;,realtime_rain/bubbles/polls-bubble}') no-repeat;
}
.bubble-polls .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/polls-avatar}') no-repeat;
}

.bubble-ecommerce {
	background: url('{$IMG;,realtime_rain/bubbles/ecommerce-bubble}') no-repeat;
}
.bubble-ecommerce .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/ecommerce-avatar}') no-repeat;
}

.bubble-actionlog {
	background: url('{$IMG;,realtime_rain/bubbles/actionlog-bubble}') no-repeat;
}
.bubble-actionlog .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/actionlog-avatar}') no-repeat;
}

.bubble-security {
	background: url('{$IMG;,realtime_rain/bubbles/security-bubble}') no-repeat;
}
.bubble-security .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/security-avatar}') no-repeat;
}

.bubble-chat {
	background: url('{$IMG;,realtime_rain/bubbles/chat-bubble}') no-repeat;
}
.bubble-chat .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/chat-avatar}') no-repeat;
}

.bubble-stats {
	background: url('{$IMG;,realtime_rain/bubbles/stats-bubble}') no-repeat;
}
.bubble-stats .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/stats-avatar}') no-repeat;
}

.bubble-join, .bubble-lorem {
	background: url('{$IMG;,realtime_rain/bubbles/join-bubble}') no-repeat;
}
.bubble-join .avatar-icon, .bubble-lorem .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/join-avatar}') no-repeat;
}

.bubble-calendar {
	background: url('{$IMG;,realtime_rain/bubbles/calendar-bubble}') no-repeat;
}
.bubble-calendar .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/calendar-avatar}') no-repeat;
}

.bubble-search {
	background: url('{$IMG;,realtime_rain/bubbles/search-bubble}') no-repeat;
}
.bubble-search .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/search-avatar}') no-repeat;
}

.bubble-point-credits {
	background: url('{$IMG;,realtime_rain/bubbles/point_credits-bubble}') no-repeat;
}
.bubble-point-credits .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/point_credits-avatar}') no-repeat;
}

.bubble-point-debits {
	background: url('{$IMG;,realtime_rain/bubbles/point_debits-bubble}') no-repeat;
}
.bubble-point-debits .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/point_debits-avatar}') no-repeat;
}

.bubble-point-transactions {
	background: url('{$IMG;,realtime_rain/bubbles/point_transactions-bubble}') no-repeat;
}
.bubble-point-transactions .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/point_transactions-avatar}') no-repeat;
}

.bubble-banners {
	background: url('{$IMG;,realtime_rain/bubbles/banners-bubble}') no-repeat;
}
.bubble-banners .avatar-icon {
	background: url('{$IMG;,realtime_rain/avatars/banners-avatar}') no-repeat;
}

.bubble-wrap {
	opacity: 0.9;
}

